# partie_emettrice

./: CMakeLists.txt  partitions.csv
components/bgt_sensor_manager/: CMakeLists.txt  bgt_sensor_manager.c
components/bgt_sensor_manager/include/: bgt_sensor_manager.h
components/lora_driver/: CMakeLists.txt  lora_manager.c
components/lora_manager/: CMakeLists.txt  lora_manager.c
components/lora_manager/include/: lora_manager.h
components/rtc_driver/include/: rtc_manager.h
components/rtc_manager/: CMakeLists.txt  rtc_manager.c
components/rtc_manager/include/: rtc_manager.h
components/sd_manager/: CMakeLists.txt  sd_manager.c
components/sd_manager/include/: sd_manager.h
components/sleep_manager/: CMakeLists.txt  sleep_manager.c
components/sleep_manager/include/: sleep_manager.h
main/: CMakeLists.txt  app_config.h  main.c
